@@ -10,6 +10,7 @@
     * Add Net::SSLeay::SSL_CTX#set_post_handshake_auth method.
     * Add Net::SSLeay::SSL_CTX#use_PrivateKey method.
     * Add Net::SSLeay::SSL_CTX#set_session_id_context method.
+    * Add Net::SSLeay::SSL_CTX#set_min_proto_version method.
     
 0.011 2024-11-12
   [New Features]
